Fix - Manage spacing while latest posts

--- a/sass/_normalize.scss
+++ b/sass/_normalize.scss
@@ -496,6 +496,10 @@ a:focus {
 	outline: 0;
 }
 
+#content {
+	margin-top: 30px;
+}
+
 /*--------------------------------------------------------------
 7.0 Alignments
 --------------------------------------------------------------*/
