--- a/sass/theme/blog/_blog.scss
+++ b/sass/theme/blog/_blog.scss
@@ -122,7 +122,7 @@ article {
 
 article:first-child {
 	border-top: none;
-	margin-top: 30px;
+	margin-top: 0px;
 	padding-top: 0px;
 }
 
