--- a/style.css
+++ b/style.css
@@ -451,6 +451,9 @@ a:focus {
 #content[tabindex="-1"]:focus {
   outline: 0; }
 
+#content {
+  margin-top: 30px; }
+
 /*--------------------------------------------------------------
 7.0 Alignments
 --------------------------------------------------------------*/
@@ -2806,7 +2809,7 @@ article {
 
 article:first-child {
   border-top: none;
-  margin-top: 30px;
+  margin-top: 0px;
   padding-top: 0px; }
 
 .entry-btn .btn {
